# AmityEngine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindLibSndFile.cmake
src/app/: TestGame.cpp  TestGame.hpp  main.cpp
src/core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CollisionEntity.hpp  DataStructures.hpp  Entity.cpp  Entity.hpp  ModelRenderable.cpp  ModelRenderable.hpp  Renderable.cpp  Renderable.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Sound.cpp  Sound.hpp  TerrainRenderable.cpp  TerrainRenderable.hpp  main.cpp
src/shaders/: frag.glsl  postprocessFrag.glsl  vert.glsl
